packages/dartcv/src/core/mat.h

int cv_Mat_rows(Mat self);
CvStatus* cv_Mat_row(Mat self, int y, Mat* rval, CvCallback_0 callback);
CvStatus* cv_Mat_setTo(Mat self, Scalar value, Mat mask, CvCallback_0 callback);
CvStatus* cv_Mat_reshape(Mat self, int cn, int rows, Mat* rval, CvCallback_0 callback);
CvStatus* cv_Mat_reshape_1(Mat self, int cn, VecI32 newshape, Mat* rval, CvCallback_0 callback);
void cv_Mat_set_Vec2b(Mat self, int i0, int i1, Vec2b val);
void cv_Mat_set_Vec3b(Mat self, int i0, int i1, Vec3b val);
void cv_Mat_set_Vec4b(Mat self, int i0, int i1, Vec4b val);
void cv_Mat_set_Vec2s(Mat self, int i0, int i1, Vec2s val);
void cv_Mat_set_Vec3s(Mat self, int i0, int i1, Vec3s val);
void cv_Mat_set_Vec4s(Mat self, int i0, int i1, Vec4s val);
void cv_Mat_set_Vec2w(Mat self, int i0, int i1, Vec2w val);
void cv_Mat_set_Vec3w(Mat self, int i0, int i1, Vec3w val);
void cv_Mat_set_Vec4w(Mat self, int i0, int i1, Vec4w val);
void cv_Mat_set_Vec2i(Mat self, int i0, int i1, Vec2i val);
void cv_Mat_set_Vec3i(Mat self, int i0, int i1, Vec3i val);
void cv_Mat_set_Vec4i(Mat self, int i0, int i1, Vec4i val);
void cv_Mat_set_Vec6i(Mat self, int i0, int i1, Vec6i val);
void cv_Mat_set_Vec2f(Mat self, int i0, int i1, Vec2f val);
void cv_Mat_set_Vec3f(Mat self, int i0, int i1, Vec3f val);
void cv_Mat_set_Vec4f(Mat self, int i0, int i1, Vec4f val);
void cv_Mat_set_Vec6f(Mat self, int i0, int i1, Vec6f val);
void cv_Mat_set_Vec2d(Mat self, int i0, int i1, Vec2d val);
void cv_Mat_set_Vec3d(Mat self, int i0, int i1, Vec3d val);
void cv_Mat_set_Vec4d(Mat self, int i0, int i1, Vec4d val);
void cv_Mat_set_Vec6d(Mat self, int i0, int i1, Vec6d val);