packages/dartcv/lib/src/g/core.g.dart


  ffi.Pointer<CvStatus> cv_Mat_reshape(
    Mat self,
    int cn,
    int rows,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_reshape(
      self,
      cn,
      rows,
      rval,
      callback,
    );
  }

  late final _cv_Mat_reshapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int,
              ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_Mat_reshape');
  late final _cv_Mat_reshape = _cv_Mat_reshapePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_reshape_1(
    Mat self,
    int cn,
    VecI32 newshape,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_reshape_1(
      self,
      cn,
      newshape,
      rval,
      callback,
    );
  }

  late final _cv_Mat_reshape_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, VecI32, ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_reshape_1');
  late final _cv_Mat_reshape_1 = _cv_Mat_reshape_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, VecI32, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_row(
    Mat self,
    int y,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_row(
      self,
      y,
      rval,
      callback,
    );
  }

  late final _cv_Mat_rowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_row');
  late final _cv_Mat_row = _cv_Mat_rowPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  int cv_Mat_rows(
    Mat self,
  ) {
    return _cv_Mat_rows(
      self,
    );
  }

  late final _cv_Mat_rowsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('cv_Mat_rows');
  late final _cv_Mat_rows =
      _cv_Mat_rowsPtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> cv_Mat_setTo(
    Mat self,
    Scalar value,
    Mat mask,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_setTo(
      self,
      value,
      mask,
      callback,
    );
  }

  late final _cv_Mat_setToPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Scalar, Mat, imp1.CvCallback_0)>>('cv_Mat_setTo');
  late final _cv_Mat_setTo = _cv_Mat_setToPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Scalar, Mat, imp1.CvCallback_0)>(isLeaf: true);

  void cv_Mat_set_Vec2b(
    Mat self,
    int i0,
    int i1,
    Vec2b val,
  ) {
    return _cv_Mat_set_Vec2b(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec2bPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec2b)>>(
      'cv_Mat_set_Vec2b');
  late final _cv_Mat_set_Vec2b = _cv_Mat_set_Vec2bPtr
      .asFunction<void Function(Mat, int, int, Vec2b)>(isLeaf: true);

  void cv_Mat_set_Vec2d(
    Mat self,
    int i0,
    int i1,
    Vec2d val,
  ) {
    return _cv_Mat_set_Vec2d(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec2dPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec2d)>>(
      'cv_Mat_set_Vec2d');
  late final _cv_Mat_set_Vec2d = _cv_Mat_set_Vec2dPtr
      .asFunction<void Function(Mat, int, int, Vec2d)>(isLeaf: true);

  void cv_Mat_set_Vec2f(
    Mat self,
    int i0,
    int i1,
    Vec2f val,
  ) {
    return _cv_Mat_set_Vec2f(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec2fPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec2f)>>(
      'cv_Mat_set_Vec2f');
  late final _cv_Mat_set_Vec2f = _cv_Mat_set_Vec2fPtr
      .asFunction<void Function(Mat, int, int, Vec2f)>(isLeaf: true);

  void cv_Mat_set_Vec2i(
    Mat self,
    int i0,
    int i1,
    Vec2i val,
  ) {
    return _cv_Mat_set_Vec2i(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec2iPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec2i)>>(
      'cv_Mat_set_Vec2i');
  late final _cv_Mat_set_Vec2i = _cv_Mat_set_Vec2iPtr
      .asFunction<void Function(Mat, int, int, Vec2i)>(isLeaf: true);

  void cv_Mat_set_Vec2s(
    Mat self,
    int i0,
    int i1,
    Vec2s val,
  ) {
    return _cv_Mat_set_Vec2s(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec2sPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec2s)>>(
      'cv_Mat_set_Vec2s');
  late final _cv_Mat_set_Vec2s = _cv_Mat_set_Vec2sPtr
      .asFunction<void Function(Mat, int, int, Vec2s)>(isLeaf: true);

  void cv_Mat_set_Vec2w(
    Mat self,
    int i0,
    int i1,
    Vec2w val,
  ) {
    return _cv_Mat_set_Vec2w(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec2wPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec2w)>>(
      'cv_Mat_set_Vec2w');
  late final _cv_Mat_set_Vec2w = _cv_Mat_set_Vec2wPtr
      .asFunction<void Function(Mat, int, int, Vec2w)>(isLeaf: true);

  void cv_Mat_set_Vec3b(
    Mat self,
    int i0,
    int i1,
    Vec3b val,
  ) {
    return _cv_Mat_set_Vec3b(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec3bPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec3b)>>(
      'cv_Mat_set_Vec3b');
  late final _cv_Mat_set_Vec3b = _cv_Mat_set_Vec3bPtr
      .asFunction<void Function(Mat, int, int, Vec3b)>(isLeaf: true);

  void cv_Mat_set_Vec3d(
    Mat self,
    int i0,
    int i1,
    Vec3d val,
  ) {
    return _cv_Mat_set_Vec3d(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec3dPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec3d)>>(
      'cv_Mat_set_Vec3d');
  late final _cv_Mat_set_Vec3d = _cv_Mat_set_Vec3dPtr
      .asFunction<void Function(Mat, int, int, Vec3d)>(isLeaf: true);

  void cv_Mat_set_Vec3f(
    Mat self,
    int i0,
    int i1,
    Vec3f val,
  ) {
    return _cv_Mat_set_Vec3f(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec3fPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec3f)>>(
      'cv_Mat_set_Vec3f');
  late final _cv_Mat_set_Vec3f = _cv_Mat_set_Vec3fPtr
      .asFunction<void Function(Mat, int, int, Vec3f)>(isLeaf: true);

  void cv_Mat_set_Vec3i(
    Mat self,
    int i0,
    int i1,
    Vec3i val,
  ) {
    return _cv_Mat_set_Vec3i(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec3iPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec3i)>>(
      'cv_Mat_set_Vec3i');
  late final _cv_Mat_set_Vec3i = _cv_Mat_set_Vec3iPtr
      .asFunction<void Function(Mat, int, int, Vec3i)>(isLeaf: true);

  void cv_Mat_set_Vec3s(
    Mat self,
    int i0,
    int i1,
    Vec3s val,
  ) {
    return _cv_Mat_set_Vec3s(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec3sPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec3s)>>(
      'cv_Mat_set_Vec3s');
  late final _cv_Mat_set_Vec3s = _cv_Mat_set_Vec3sPtr
      .asFunction<void Function(Mat, int, int, Vec3s)>(isLeaf: true);

  void cv_Mat_set_Vec3w(
    Mat self,
    int i0,
    int i1,
    Vec3w val,
  ) {
    return _cv_Mat_set_Vec3w(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec3wPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec3w)>>(
      'cv_Mat_set_Vec3w');
  late final _cv_Mat_set_Vec3w = _cv_Mat_set_Vec3wPtr
      .asFunction<void Function(Mat, int, int, Vec3w)>(isLeaf: true);

  void cv_Mat_set_Vec4b(
    Mat self,
    int i0,
    int i1,
    Vec4b val,
  ) {
    return _cv_Mat_set_Vec4b(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec4bPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec4b)>>(
      'cv_Mat_set_Vec4b');
  late final _cv_Mat_set_Vec4b = _cv_Mat_set_Vec4bPtr
      .asFunction<void Function(Mat, int, int, Vec4b)>(isLeaf: true);

  void cv_Mat_set_Vec4d(
    Mat self,
    int i0,
    int i1,
    Vec4d val,
  ) {
    return _cv_Mat_set_Vec4d(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec4dPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec4d)>>(
      'cv_Mat_set_Vec4d');
  late final _cv_Mat_set_Vec4d = _cv_Mat_set_Vec4dPtr
      .asFunction<void Function(Mat, int, int, Vec4d)>(isLeaf: true);

  void cv_Mat_set_Vec4f(
    Mat self,
    int i0,
    int i1,
    Vec4f val,
  ) {
    return _cv_Mat_set_Vec4f(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec4fPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec4f)>>(
      'cv_Mat_set_Vec4f');
  late final _cv_Mat_set_Vec4f = _cv_Mat_set_Vec4fPtr
      .asFunction<void Function(Mat, int, int, Vec4f)>(isLeaf: true);

  void cv_Mat_set_Vec4i(
    Mat self,
    int i0,
    int i1,
    Vec4i val,
  ) {
    return _cv_Mat_set_Vec4i(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec4iPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec4i)>>(
      'cv_Mat_set_Vec4i');
  late final _cv_Mat_set_Vec4i = _cv_Mat_set_Vec4iPtr
      .asFunction<void Function(Mat, int, int, Vec4i)>(isLeaf: true);

  void cv_Mat_set_Vec4s(
    Mat self,
    int i0,
    int i1,
    Vec4s val,
  ) {
    return _cv_Mat_set_Vec4s(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec4sPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec4s)>>(
      'cv_Mat_set_Vec4s');
  late final _cv_Mat_set_Vec4s = _cv_Mat_set_Vec4sPtr
      .asFunction<void Function(Mat, int, int, Vec4s)>(isLeaf: true);

  void cv_Mat_set_Vec4w(
    Mat self,
    int i0,
    int i1,
    Vec4w val,
  ) {
    return _cv_Mat_set_Vec4w(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec4wPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec4w)>>(
      'cv_Mat_set_Vec4w');
  late final _cv_Mat_set_Vec4w = _cv_Mat_set_Vec4wPtr
      .asFunction<void Function(Mat, int, int, Vec4w)>(isLeaf: true);

  void cv_Mat_set_Vec6d(
    Mat self,
    int i0,
    int i1,
    Vec6d val,
  ) {
    return _cv_Mat_set_Vec6d(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec6dPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec6d)>>(
      'cv_Mat_set_Vec6d');
  late final _cv_Mat_set_Vec6d = _cv_Mat_set_Vec6dPtr
      .asFunction<void Function(Mat, int, int, Vec6d)>(isLeaf: true);

  void cv_Mat_set_Vec6f(
    Mat self,
    int i0,
    int i1,
    Vec6f val,
  ) {
    return _cv_Mat_set_Vec6f(
      self,
      i0,
      i1,
      val,
    );
  }

  late final _cv_Mat_set_Vec6fPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Mat, ffi.Int, ffi.Int, Vec6f)>>(
      'cv_Mat_set_Vec6f');
  late final _cv_Mat_set_Vec6f = _cv_Mat_set_Vec6fPtr
      .asFunction<void Function(Mat, int, int, Vec6f)>(isLeaf: true);

  void cv_Mat_set_Vec6i(
    Mat self,
    int i0,
    int i1,
    Vec6i val,
  ) {
    return _cv_Mat_set_Vec6i(
      self,
      i0,
      i1,
      val,
    );
  }
